--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -611,7 +611,7 @@ The Yelloweye Rockfish assessment uses estimates of fecundity
 (eggs-at-length) from the Dick et al. (2017) method, and spawning output
 is reported in millions of eggs. The unexploited level of spawning stock
 output is estimated to be 1190 million eggs (95\% confidence interval:
-1,117.6-1,262.4 million eggs) (Figure~\ref{fig-es-so}). At the beginning
+1,048.1-1,331.9 million eggs) (Figure~\ref{fig-es-so}). At the beginning
 of 2025, the spawning stock output is estimated to be 477.63 million
 eggs (95\% confidence interval: 384--571 million eggs), which represents
 40.1\% of the unfished spawning output level.
@@ -619,7 +619,7 @@ eggs (95\% confidence interval: 384--571 million eggs), which represents
 Estimated relative spawning output was below the minimum stock size
 threshold in the late 1990s and was lowest in the early 2000s before
 increasing over the last 20 years. The 2024 estimated relative spawning
-output follows an increasing trajectory and is slightly below the
+output follows an increasing trajectory and is slightly above the
 management target threshold (Figure~\ref{fig-es-so},
 Figure~\ref{fig-es-sb}). Though Yelloweye Rockfish are considered a
 single stock due to their population's even genetic and spatial
@@ -667,9 +667,9 @@ Year & Spawning output & Lower Interval. & Upper Interval. & Fraction Unfished &
 
 }
 
-\caption{\label{fig-es-so}Time series of estimated spawning output (in
-million eggs) for the base model (circles) with \textasciitilde{} 95\%
-interval (dashed lines). Spawning output is expressed in million eggs.}
+\caption{\label{fig-es-so}Time series of estimated spawning output
+(millions of eggs) for the base model (circles) with \textasciitilde{}
+95\% interval (dashed lines).}
 
 \end{figure}%
 
@@ -777,8 +777,8 @@ intervals.}
 
 This assessment estimates that the stock of Yelloweye Rockfish off the
 continental U.S. Pacific Coast is currently at 40.1\% of its unexploited
-level. This is above the overfished threshold of SB25\%, and slightly
-above the management target SB40\% of unfished spawning biomass. Fishing
+level. This is above the overfished threshold of SO25\%, and slightly
+above the management target SO40\% of unfished spawning output. Fishing
 intensity increased throughout the 1900s as the stock was fished down,
 until stabilizing at peak intensity between the mid1980s and late 1990s
 and substantially decreasing in the late 1990s and early 2000s. Fishing
@@ -847,12 +847,12 @@ reference points based on 1) a target unfished spawning output of 40\%,
 maximum sustainable yield, are all listed in
 Table~\ref{tbl-ref-points-es-1}. Unfished spawning stock output for
 Yelloweye Rockfish was estimated to be 1190 million eggs (95\%
-confidence interval: 1,117.6-1,262.4 million eggs). The management
+confidence interval: 1,048.1-1,331.9 million eggs). The management
 target for Yelloweye Rockfish is defined as 40\% of the unfished
-spawning output (SB40\%), which is estimated by the model to be 476
-million eggs (95\% confidence interval: 447-505), which corresponds to
+spawning output (SO40\%), which is estimated by the model to be 476
+million eggs (95\% confidence interval: 419-533), which corresponds to
 an exploitation rate of 0.026. This harvest rate provides an equilibrium
-yield of 128 mt at SB40\% (95\% confidence interval: 120-136 mt). The
+yield of 122 mt at SO40\% (95\% confidence interval: 108-137 mt). The
 equilibrium yield curve is shown in Figure~\ref{fig-eq-yield-es}.
 
 \clearpage
@@ -909,7 +909,7 @@ MSY (mt) & 128 & 113 & 143 \\
 \caption{\label{fig-eq-yield-es}Equilibrium yield curve (derived from
 reference point values) for the base model. Values are based on 2024
 fishery selectivity and distribution with steepness fixed at 0.718. The
-relative spawning output is relative to unfished spawning biomass.}
+relative spawning output is relative to unfished spawning output.}
 
 \end{figure}%
 
@@ -1053,7 +1053,7 @@ Mgmt & Year & Catch & Low Spawn & Low Frac & Base Spawn & Base Frac & High Spawn
 \subsection*{Scientific uncertainty}\label{scientific-uncertainty}
 \addcontentsline{toc}{subsection}{Scientific uncertainty}
 
-The model estimated uncertainty around the 2025 spawning biomass with a
+The model estimated uncertainty around the 2025 spawning output with a
 standard deviation = 0.027. The uncertainty around the \gls{ofl} in 2025
 has a standard deviation = 11.546. Each of these are likely
 underestimates of overall uncertainty due to the necessity to fix
@@ -1690,8 +1690,9 @@ assessment results does not include any uncertainty in these quantities
 (however, some were investigated via sensitivity analyses described
 later in this report). These parameters include length-weight
 relationship parameters, maturity and fecundity parameters, natural
-mortality, and ageing error. The methods used to derive these parameters
-in the assessment are described below.
+mortality, and ageing error. Aging error matrices were unchanged. The
+methods used to derive these parameters in the assessment are described
+below.
 
 \subsubsection{Length-Weight
 Relationships}\label{length-weight-relationships}
@@ -1700,7 +1701,7 @@ The parameters for the length-weight relationship were updated to
 include the most recent WCGBTS data from 2017 - 2024. Length-weight
 curves were fitted using this equation:
 
-\(W\) =\$ 7.18331*10\textsuperscript{-6}\(L\)\textsuperscript{3.2448}
+\(W\) = 7.18331*10\textsuperscript{-6}\(L\)\textsuperscript{3.2448}
 
 Where \(W\) is individual weight (kg) and \(L\) is total natural length
 (cm) (Figure~\ref{fig-LWrel}).
@@ -1733,8 +1734,6 @@ and \(a\) and \(b\) are constant coefficients
 
 The 2025 base model used the 2017 assessment's initial value of natural
 Mortality (\(M\)) which was estimated based on Owen S. Hamel (2015).
-
-Aging error matrices were unchanged.
 
 \subsection{Environmental and ecosystem
 data}\label{environmental-and-ecosystem-data}
@@ -1890,8 +1889,8 @@ assessment (Gertseva and Cope 2017) are listed below.
     little to no additional change in the model, with the exception of
     the updated parameterization of the catchability offset for the
     Oregon recreational index, which increased spawning output and final
-    stock status (Figure~\ref{fig-bridge19-comp2} and
-    Figure~\ref{fig-bridge19-comp4} - UPDATE THESE PLOTS).
+    stock status (Figure~\ref{fig-bridge23-comp2} and
+    Figure~\ref{fig-bridge23-comp4}).
   \end{itemize}
 \item
   Software and Workflow:
@@ -2048,11 +2047,11 @@ relatively well.
 The fits to the mean age by fleet are generally acceptable and are
 responsive to short-term temporal changes (Figure~\ref{fig-mean-age-3} -
 Figure~\ref{fig-mean-age-12}), with the exception of the Oregon
-recreational fleet and the IPHC survey, where the model predicts a lower
-mean age than the data suggest but these results are consistent with the
-2017 assessment. Pearson residuals by year and fleet show strong
-residual patterns but are difficult to interpret given the general lack
-of age data. See the
+recreational fleet and the IPHC survey, where the model predicts a
+higher and a lower mean age, respectively, than the data suggest. This
+is consistent with the 2017 assessment. Pearson residuals by year and
+fleet show strong residual patterns but are difficult to interpret given
+the general lack of age data. See the
 \href{https://github.com/rclairer/Sebastes_ruberrimus_2025}{GitHub
 repository} for individual Pearson residual plots.
 
@@ -2123,7 +2122,11 @@ surface, and that the base model is at a global minimum
 profiles, we are confident that the base model, as presented, represents
 the best fit to the data given the assumptions made. There were no
 difficulties in inverting the Hessian to obtain estimates of
-variability. The final gradient was 0.00087.
+variability. The final gradient was 0.00215. The maximum gradient
+component was slightly higher than the convergence criterion, but the
+``hess\_step'' option was used successfully to confirm that the gradient
+could be improved without changing the model results, providing strong
+evidence of convergence to a mode with quadratic log-likelihood surface.
 
 \subsubsection{Sensitivity Analyses}\label{sensitivity-analyses}
 
@@ -2287,12 +2290,12 @@ indicator of abundance dynamics.
 
 This assessment estimates that the stock of Yelloweye Rockfish off the
 continental U.S. Pacific Coast is currently at 40.1\% of its unexploited
-level. This is above the overfished threshold of SB25\%, and slightly
-above the management target of SB40\% of unfished spawning biomass. Both
+level. This is above the overfished threshold of SO25\%, and slightly
+above the management target of SO40\% of unfished spawning output. Both
 areas are above the overfished level of 25\%. The assessment estimates
 that the coastwide spawning output of Yelloweye Rockfish dropped below
-the SB40\% target for the first time in 1986 and below the overfished
-SB25\% threshold in 1993, as a result of intense fishing by commercial
+the SO40\% target for the first time in 1986 and below the overfished
+SO25\% threshold in 1993, as a result of intense fishing by commercial
 and recreational fleets. It continued to decline and reached 14.2\% of
 its unfished output in 2000 (Table~\ref{tbl-ts}). The same year, the
 stock was declared overfished. Since then, the spawning output has
@@ -2302,21 +2305,19 @@ stock rebuilding.
 Reference points for the base model are summarized in
 Table~\ref{tbl-ref-points-es-2}. Unfished spawning stock output for
 Yelloweye Rockfish was estimated to be 1190 million eggs (95\%
-confidence interval: \textbf{1,045.7-1,328.5} million eggs). The stock
-is declared overfished if the current spawning output is estimated to be
-below the \gls{msst} of 25\% of unfished level (SB25\%). The management
+confidence interval: 1,048.1-1,331.9 million eggs). The stock is
+declared overfished if the current spawning output is estimated to be
+below the \gls{msst} of 25\% of unfished level (SO25\%). The management
 target for Yelloweye Rockfish is defined as 40\% of the unfished
-spawning output (SB40\%), which is estimated by the model to be
-\textbf{475} million eggs (95\% confidence interval: \textbf{418-531}
-million eggs), which corresponds to an exploitation rate of
-\textbf{0.026}. This harvest rate provides an equilibrium yield of
-\textbf{121} mt at SB40\% (95\% confidence interval: \textbf{107-136}
-mt). The model estimate of maximum sustainable yield (MSY) is
-\textbf{127} mt (95\% confidence interval: \textbf{112-142} mt). The
-estimated spawning stock output at MSY is \textbf{344} million eggs
-(95\% confidence interval: \textbf{303-384} million eggs). The
-exploitation rate corresponding to the estimated SPRMSY of F36\% is
-\textbf{0.036}.
+spawning output (SO40\%), which is estimated by the model to be 476
+million eggs (95\% confidence interval: 419-533 million eggs), which
+corresponds to an exploitation rate of 0.026. This harvest rate provides
+an equilibrium yield of 122 mt at SO40\% (95\% confidence interval:
+108-137 mt). The model estimate of maximum sustainable yield (MSY) is
+128 mt (95\% confidence interval: 113-143 mt). The estimated spawning
+stock output at MSY is 343 million eggs (95\% confidence interval:
+303-384 million eggs). The exploitation rate corresponding to the
+estimated SPRMSY of F36\% is 0.037.
 
 This assessment estimates that the 2024 SPR is 64.3\%
 (Figure~\ref{fig-time-spr}). The SPR used for setting the OFL is 50\%,
@@ -2351,7 +2352,7 @@ Twelve-year forecasts for each state of nature were calculated
 \subsection{Evaluation of Scientific
 Uncertainty}\label{evaluation-of-scientific-uncertainty}
 
-The model estimated uncertainty around the 2025 spawning biomass with a
+The model estimated uncertainty around the 2025 spawning output with a
 standard deviation = 0.027. The uncertainty around the \gls{ofl} in 2025
 has a standard deviation = 11.546. Each of these are likely
 underestimates of overall uncertainty due to the necessity to fix
@@ -2392,6 +2393,11 @@ population:
 \newpage{}
 
 \section{Acknowledgements}\label{sec-acknowledgements}
+
+The authors would like to thank the other members of the FSH 577 class,
+particularly those on the Yelloweye Rockfish team (Emily Branam, Julia
+Coates, Kimberly Fitzpatrick, Madison Sandquist, Olivia Boisen and
+Rachel Brooks).
 
 \newpage{}
 
@@ -4433,14 +4439,16 @@ and indices (red), and all tuned length and age composition data
 
 \centering{
 
-\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/19_base_comm_discards_updated/compare2_spawnbio_uncertainty.png}}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/23_alldata_tunecomps_fitbias_upctl_tuned_upstart_refine_fore/compare2_spawnbio_uncertainty.png}}
 
 }
 
-\caption{\label{fig-bridge19-comp2}Comparison of the spawning output
+\caption{\label{fig-bridge23-comp2}Comparison of the spawning output
 (millions of eggs) of the 2017 model with an updated SS3 executable
-(blue), updated and extended and tuned data (red), and the proposed 2025
-base model after all final bridging steps (green).}
+(blue), updated and extended and tuned data (green), the updated SS
+input file changes with tuning (yellow), and the proposed 2025 base
+model after all final bridging steps (red), all with 95\% confidence
+intervals.}
 
 \end{figure}%
 
@@ -4448,15 +4456,16 @@ base model after all final bridging steps (green).}
 
 \centering{
 
-\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/19_base_comm_discards_updated/compare4_Bratio_uncertainty.png}}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/23_alldata_tunecomps_fitbias_upctl_tuned_upstart_refine_fore/compare4_Bratio_uncertainty.png}}
 
 }
 
-\caption{\label{fig-bridge19-comp4}Comparison of the stock status output
+\caption{\label{fig-bridge23-comp4}Comparison of the stock status output
 of the 2017 model with an updated SS3 executable (blue), updated and
-extended and tuned data (red), and the proposed 2025 base model after
-all final bridging steps (green) relative to the management target and
-minimum stock size threshold.}
+extended and tuned data (green), the updated SS input file changes with
+tuning (yellow), and the proposed 2025 base model after all final
+bridging steps (red) relative to the management target and minimum stock
+size threshold, including 95\% confidence intervals.}
 
 \end{figure}%
 
@@ -4527,7 +4536,8 @@ all fleets.}
 }
 
 \caption{\label{fig-spoutlen}Spawning output (millions of eggs) at
-length.}
+length. Yelloweye length-at-age 70 (the second reference age) equals
+61.4 and an L-infinity of 61.7.}
 
 \end{figure}%
 
