--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -148,7 +148,7 @@ $$
 F = aL^b
 $$
 
-Where $F$ is fecundity (number of eggs), $L$ is fish length (cm), and $a$ and $b$ are constant coefficients (@fig-fecundity). For Yelloweye @dick_meta-analysis_2017 estimated $a = 7.21847$\*10^-8^ and $b = 4.043$.
+Where $F$ is fecundity (number of eggs), $L$ is fish length (cm), and $a$ and $b$ are constant coefficients (@fig-fecundity). For Yelloweye Rockfish,  @dick_meta-analysis_2017 estimated $a = 7.21847$\*10^-8^ and $b = 4.043$.
 
 ### Natural Mortality
 The 2025 base model used the 2017 assessment's initial value of natural Mortality ($M$) which was estimated based on @hamel2022development.
