--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -291,7 +291,7 @@
   number = {1},
   urldate = {2016-10-16},
   journal = {ICES Journal of Marine Science: Journal du Conseil},
-  author = {Hamel, Owen S.},
+  author = {Hamel, O.S.},
   month = jan,
   year = {2015},
   pages = {62--69}
@@ -2410,7 +2410,7 @@ volume = {239}
 
 @article{hamel2022development,
   title={Development and considerations for application of a longevity-based prior for the natural mortality rate},
-  author={Hamel, Owen S and Cope, Jason M},
+  author={Hamel, O.S. and Cope, Jason M},
   journal={Fisheries Research},
   volume={256},
   pages={106477},
