--- a/report/04a_model_summary.qmd
+++ b/report/04a_model_summary.qmd
@@ -64,7 +64,7 @@ Additional variance was estimated and added to the input variance for all indice
 
 The base model had `r sum(mod_out$parameters$Phase > 0)` estimated parameters (tallied by type in @tbl-n-param). A single-sex growth curve was estimated (@fig-growth). Natural mortality was fixed, as in the 2017 assessment. Unfished recruitment and the distribution of recruits between areas are estimated. Steepness of the stock-recruit relationship was fixed at 0.72, updated from the 2017 assessment which was fixed at 0.718. Estimating steepness was evaluated as a sensitivity. As is current practice, recruitment deviations during the "main" period (from `r mod_in$ctl$MainRdevYrFirst` to `r mod_in$ctl$MainRdevYrLast`) were forced to sum to zero and the bias adjustment ramp was updated (@fig-biasadj). 
 
-Catchability parameters, we extended the time block on catchability parameter for the OR rec index to 2004 to encompass additional data. To fit these data we extimated the catchability offset between MRFFS and ORBS, both are in fleet 6. In order to estiamte it we set Float to 0 and Phase to 1.
+We extended the time blocks on catchability parameters to 2024 to encompass additional data. To best fit the index for the Oregon recreational fleet, an offset for catchability between the MRFFS and ORBS sampling time periods was estimated in the 2017 assessment. In order to estimate this parameter under current best practices, the float was set to 0 and the phase to 1.
 
 All selectivities were assumed to be length-based and used a double-normal functional form. Selectivities for all fleets were estimated to be asymptotic (@fig-selex_allfleets), though selectivity for the California Onboard Observer CPUE was mirrored to the California recreational fleet. Selectivities were constant through time. Dome-shaped selectivity and various time blocks for specific fleets were explored in @gertseva_stock_2017 but not re-evaluated in this update assessment.   
 
